terraform/apps/orange-purple.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange-app
  namespace: sample-apps
  labels:
    app: orange-app
spec:
  selector:
    matchLabels:
      app: orange-app
  replicas: 2
  template:
    metadata:
      labels:
        app: orange-app
    spec:
      containers:
      - name: orange-container
        image: public.ecr.aws/e1x6y8e1/orange:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purple-app
  namespace: sample-apps
  labels:
    app: purple-app
spec:
  selector:
    matchLabels:
      app: purple-app
  replicas: 2
  template:
    metadata:
      labels:
        app: purple-app
    spec:
      containers:
      - name: purple-container
        image: public.ecr.aws/e1x6y8e1/purple:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample-apps
  name: orange-service
  labels:
    app: orange-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /orange/index.html
spec:
  type: ClusterIP
  selector:
    app: orange-app
  ports:
    - port: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample-apps
  name: purple-service
  labels:
    app: purple-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /purple/index.html
spec:
  type: ClusterIP
  selector:
    app: purple-app
  ports:
    - port: 80
      name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orange-purple-ingress
  namespace: sample-apps
  labels:
    app: color-2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-color-lb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /orange
            pathType: Prefix
            backend:
              service:
                name: orange-service
                port:
                  number: 80                        
          - path: /purple
            pathType: Prefix
            backend:
              service:
                name: purple-service
                port:
                  number: 80
